after reset, added dots, correct ammount, correct position, correct functiuon

--- a/PomodoroClock.html
+++ b/PomodoroClock.html
@@ -16,6 +16,7 @@
         <div id="timer">25:00</div>
       </div>
     </div>
+    <div class="dots-container"></div>
   </div>
   <script src="PomodoroClock.js"></script>
 </body>
